<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2021 RongCloud. All rights reserved.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vr_shape_bottom_dialog_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/main_white_17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basis_25px"
        android:text="@string/shield_title"
        android:textSize="@dimen/basis_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/basis_main_divider"
        android:layout_marginTop="@dimen/basis_25px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/setting"
        style="@style/main_white_17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/basis_30px"
        android:layout_marginTop="@dimen/basis_20px"
        android:text="@string/shield_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/setting_info"
        style="@style/main_secondary_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/basis_30px"
        android:layout_marginTop="@dimen/basis_10px"
        android:textColor="#99ffffff"
        android:text="@string/shield_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting" />

    <com.basis.widget.flowlayout.FlowLayout
        android:id="@+id/flow_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/basis_30px"
        android:layout_marginTop="@dimen/basis_10px"
        android:layout_marginRight="@dimen/basis_30px"
        android:gravity="left|top"
        android:orientation="horizontal"
        app:layoutDirection="ltr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_info"
        app:weightDefault="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
