<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2021 RongCloud. All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@drawable/shape_score_dialog_bg"
        android:maxWidth="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,293:175"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_label_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/please_setting_four_number_password"
            android:textColor="#020037"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="请设置 4 位数字密码" />

        <cn.rongcloud.roomkit.widget.VerifyEditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_dialog_title"
            app:verify_background_normal="@drawable/bg_et_password_item"
            app:verify_count="4"
            app:verify_height="50dp"
            app:verify_inputType="number"
            app:verify_margin="5dp"
            app:verify_password="false"
            app:verify_password_visible_time="500"
            app:verify_textColor="#FF020037"
            app:verify_textSize="30sp"
            app:verify_width="50dp" />

        <View
            android:id="@+id/v_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#FFE5E6E7"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/transparent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_divider">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/cancel"
                android:textColor="#020037"
                android:textSize="17sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FFE5E6E7"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/transparent"
                android:text="@string/confirm"
                android:textColor="#EF499A"
                android:textSize="17sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>