<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/bg_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#6F5DB6"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bg_room_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_top" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/rcy_member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcy_member"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toStartOf="@+id/btn_selectall"
        app:layout_constraintStart_toEndOf="@+id/send"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_selectall"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_present_select_all_bg"
        android:gravity="center"
        android:text="@string/select_all"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/vp_present"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rcy_member"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vp_present"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/index"
        app:layout_constraintTop_toBottomOf="@+id/send" />

    <LinearLayout
        android:id="@+id/index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_send"
        app:layout_constraintTop_toBottomOf="@+id/vp_present"
        tools:ignore="MissingConstraints">

        <View
            android:id="@+id/index_first"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_index_selected" />

        <View
            android:id="@+id/index_second"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:background="@drawable/bg_index_nomal" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_num"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_select_present_num_bg"
        android:drawableEnd="@drawable/ic_up"
        android:drawablePadding="1dp"
        android:enabled="false"
        android:gravity="center"
        android:minWidth="80dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text=""
        android:textAllCaps="false"
        android:textColor="@color/vr_selector_invitation"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send"
        app:layout_constraintTop_toBottomOf="@+id/index" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="80dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_send_present_bg"
        android:enabled="false"
        android:text="@string/send_t"
        android:textColor="@color/vr_selector_invitation"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/index" />

</androidx.constraintlayout.widget.ConstraintLayout>